--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.7",
+        "cordova-plugin-dialogs": "^1.3.3",
         "cordova-plugin-file": "^4.0.0",
         "cordova-plugin-file-transfer": "^1.6.3",
         "cordova-plugin-geolocation": "^2.4.3",
@@ -33,7 +34,8 @@
             "cordova-plugin-file-transfer": {},
             "cordova-plugin-inappbrowser": {},
             "cordova-plugin-compat": {},
-            "cordova-plugin-camera": {}
+            "cordova-plugin-camera": {},
+            "cordova-plugin-dialogs": {}
         },
         "platforms": [
             "android"
